--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "start": "node src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
     "dev": "nodemon src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
@@ -19,8 +21,10 @@
     "eslint": "^6.6.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "knex": "^0.20.1",
     "morgan": "^1.9.1",
     "ndb": "^1.1.5",
+    "pg": "^7.12.1",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
   },
@@ -28,6 +32,7 @@
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   }
 }
