--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ndb": "^1.1.5",
     "pg": "^7.12.1",
     "uuid": "^3.3.3",
+    "valid-url": "^1.0.9",
     "winston": "^3.2.1"
   },
   "devDependencies": {
