--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "^0.20.1",
     "morgan": "^1.9.1",
     "ndb": "^1.1.5",
+    "path": "^0.12.7",
     "pg": "^7.12.1",
     "uuid": "^3.3.3",
     "valid-url": "^1.0.9",
